--- a/index.html
+++ b/index.html
@@ -558,6 +558,84 @@
         </div>
     </section>
 
+    <section class="chat-case">
+        <div class="contact-case container">
+            <div class="ask-case">
+                <h1 class="font-bitter">Ask us (almost) anything</h1>
+                <p>
+                    It's time to help your teams master new skills so you can build the talent you need and turn those
+                    challenges into wins.
+                    Questions? Fill out the form and we'll find you the answers.
+                </p>
+            </div>
+
+            <div class="form-case">
+                <form>
+                    <h1 class="font-bitter">Let's chat!</h1>
+                    <div>
+                        <label>First Name</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label>Last Name</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label>Email Address</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label>Company</label>
+                        <input type="text">
+
+                    </div>
+                    <div>
+                        <label>Job title</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label>Phone</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label>Country</label>
+                        <select>
+                            <option>Turkey</option>
+                            <option>Spain</option>
+                            <option>France</option>
+                            <option>Italy</option>
+                        </select>
+                    </div>
+
+                    <div class="inputs">
+                        <div>Product Interest</div>
+                        <div class="checkboxes">
+                            <input type="checkbox">
+                            <label>Skills</label>
+                        </div>
+                        <div class="checkboxes">
+                            <input type="checkbox">
+                            <label>Cloud</label>
+                        </div>
+                        <div class="checkboxes">
+                            <input type="checkbox">
+                            <label>Flow</label>
+                        </div>
+                        <div class="checkboxes">
+                            <input type="checkbox">
+                            <label>ProServ</label>
+                        </div>
+                        <div>
+                            By filling out this form and
+                            clicking submit, you acknowledge our <a href="#">privacy policy.</a>
+                        </div>
+                        <button class="free-btn">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <script>
         var coll = document.getElementsByClassName("col-btn");
         var i;
