--- a/index.html
+++ b/index.html
@@ -568,7 +568,6 @@
                     Questions? Fill out the form and we'll find you the answers.
                 </p>
             </div>
-
             <div class="form-case">
                 <form>
                     <h1 class="font-bitter">Let's chat!</h1>
@@ -606,7 +605,6 @@
                             <option>Italy</option>
                         </select>
                     </div>
-
                     <div class="inputs">
                         <div>Product Interest</div>
                         <div class="checkboxes">
@@ -635,6 +633,97 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="footer-case container">
+            <div class="support">
+                <ul>
+                    <li>
+                        <h2 class="font-bitter">Support</h2>
+                    </li>
+                    <li>Contact</li>
+                    <li>Help Center</li>
+                    <li>IP Allowlist</li>
+                    <li>Site Map</li>
+                    <li>Download Pluralsight</li>
+                    <li>Skills Plans</li>
+                    <li>Flow Plans</li>
+                </ul>
+            </div>
+            <div class="community">
+                <ul>
+                    <li>
+                        <h2 class="font-bitter">Community</h2>
+                    </li>
+                    <li>Guides</li>
+                    <li>Teach</li>
+                    <li>Partner with Pluralsight</li>
+                    <li>Affiliate Partners</li>
+                    <li>Pluralsight One</li>
+                    <li>Authors</li>
+                </ul>
+            </div>
+            <div class="company">
+                <ul>
+                    <li>
+                        <h2 class="font-bitter">Company</h2>
+                    </li>
+                    <li>About Us</li>
+                    <li>Careers</li>
+                    <li>Newsroom</li>
+                    <li>Resources</li>
+                </ul>
+            </div>
+            <div class="industries">
+                <ul>
+                    <li>
+                        <h2 class="font-bitter">Industries</h2>
+                    </li>
+                    <li>Contact</li>
+                    <li>Help Center</li>
+                </ul>
+            </div>
+            <div class="newsletter">
+                <ul>
+                    <li>
+                        <h2 class="font-bitter">Newsletter</h2>
+                    </li>
+                    <li>Sign up with your email to join our mailing list.</li>
+                </ul>
+                <div class="news">
+                    <label>Email Adress</label><br>
+                    <input type="text" />
+                    <div class="news-input">
+                        <input type="checkbox">
+                        <label>I would like to receive emails from Pluralsight:</label>
+                    </div>
+                    <div class="social-media">
+                        <button>Submit</button>
+                        <ul class="d-flex">
+                            <li><i class="fa-brands fa-facebook"></i></li>
+                            <li><i class="fa-brands fa-twitter"></i></li>
+                            <li><i class="fa-brands fa-instagram"></i></li>
+                            <li><i class="fa-brands fa-linkedin"></i></li>
+                            <li><i class="fa-brands fa-youtube"></i></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="footer-end    container">
+            <div class="flex">
+                <img src="/images/pluralsight-footer-logo-icon.png" alt="">
+                <code>Copyright © 2004 - 2023 Pluralsight LLC. All rights reserved</code>
+            </div>
+            <div class="footer-header d-flex">
+                <h6>Terms of Use</h6>
+                <h6>Privacy Notice</h6>
+                <h6>Modern Slavery Statement</h6>
+            </div>
+        </div>
+    </footer>
 
     <script>
         var coll = document.getElementsByClassName("col-btn");
