--- a/index.html
+++ b/index.html
@@ -649,6 +649,7 @@
                     <li>Skills Plans</li>
                     <li>Flow Plans</li>
                 </ul>
+
             </div>
             <div class="community">
                 <ul>
@@ -689,30 +690,34 @@
                         <h2 class="font-bitter">Newsletter</h2>
                     </li>
                     <li>Sign up with your email to join our mailing list.</li>
+                    <li>
+                        <div>
+                            <label>Email Address</label><br>
+                            <input type="text" style="width: 80%;">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="d-flex">
+                            <input type="checkbox">
+                            <h5 style="margin-left:5px ;">I would like to receive emails from Pluralsight:</h5>
+                        </div>
+                    </li>
                 </ul>
-                <div class="news">
-                    <label>Email Adress</label><br>
-                    <input type="text" />
-                    <div class="news-input">
-                        <input type="checkbox">
-                        <label>I would like to receive emails from Pluralsight:</label>
-                    </div>
-                    <div class="social-media">
-                        <button>Submit</button>
-                        <ul class="d-flex">
-                            <li><i class="fa-brands fa-facebook"></i></li>
-                            <li><i class="fa-brands fa-twitter"></i></li>
-                            <li><i class="fa-brands fa-instagram"></i></li>
-                            <li><i class="fa-brands fa-linkedin"></i></li>
-                            <li><i class="fa-brands fa-youtube"></i></li>
-                        </ul>
-                    </div>
 
+
+                <div class="social-media">
+                    <ul class="d-flex">
+                        <li><i class="fa-brands fa-facebook"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-instagram"></i></li>
+                        <li><i class="fa-brands fa-linkedin"></i></li>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                    </ul>
                 </div>
             </div>
 
         </div>
-        <div class="footer-end    container">
+        <div class="footer-end  container">
             <div class="flex">
                 <img src="/images/pluralsight-footer-logo-icon.png" alt="">
                 <code>Copyright © 2004 - 2023 Pluralsight LLC. All rights reserved</code>
