--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="languages  ">
                 <div class="languages-logo ">
-                    <ul class="d-flex">
+                    <ul>
                         <li><a href="#">
                                 <img src="/images/r-no-shadow.png" alt="">
                             </a> </li>
@@ -514,13 +514,8 @@
             <div class="text-center">
                 <img src="/images/logo_ps-skills.png" alt="">
                 <h1 class="font-bitter">Plans & pricing</h1>
-                <div class="indiviual-team flex-between font-bitter">
-                    <p>Individual</p>
-                    <p>Team</p>
-                </div>
             </div>
-
-            <div class="plans-cards">
+            <div class="plans-cards text-center">
                 <div class="starter">
                     <h1 class="font-bitter">Starter</h1>
                     <div class="font-bitter price">399 $</div>
@@ -548,8 +543,9 @@
                     <button class="pointer">Contact sales</button>
                     <div>or start a <a>pilot</a></div>
                 </div>
+
             </div>
-            <div class="text-center ">
+            <div class="text-center">
                 <p>*All per-user products require an annual contract.</p>
                 <a class="pointer font-bitter">Compare plans </a>
             </div>
@@ -716,7 +712,7 @@
 
         </div>
         <div class="footer-end  container">
-            <div class="flex">
+            <div class="footer-image">
                 <img src="/images/pluralsight-footer-logo-icon.png" alt="">
                 <code>Copyright © 2004 - 2023 Pluralsight LLC. All rights reserved</code>
             </div>
