--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2>Popular topics to learn now</h2>
                 <a>View all technologies <i class="fa-solid fa-chevron-right"></i></a>
             </div>
-            <div class="languages  ">
+            <div class="languages">
                 <div class="languages-logo ">
                     <ul>
                         <li><a href="#">
@@ -163,7 +163,7 @@
                         skills they need to progress
                         from novice to guru across a variety of tech skills.</p>
 
-                    <div class="upskill-btn d-flex">
+                    <div class="upskill-btn">
                         <button class="free-btn">Browse courses</button>
                         <button class="learn-btn">Learning paths</button>
                     </div>
