--- a/index.html
+++ b/index.html
@@ -687,13 +687,13 @@
                     <li>
                         <div>
                             <label>Email Address</label><br>
-                            <input type="text" style="width: 80%;">
+                            <input type="text" style="width: 90%;">
                         </div>
                     </li>
                     <li>
                         <div class="d-flex">
                             <input type="checkbox">
-                            <h5 style="margin-left:5px ;">I would like to receive emails from Pluralsight:</h5>
+                            <h5 >I would like to receive emails from Pluralsight:</h5>
                         </div>
                     </li>
                 </ul>
