--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     the tech fluency they need to build business-critical skills.</p>
                 <div class="card-btn">
                     <button class="free-btn">Try for free</button>
-                    <span>Tel: +353 1 264 2424</span>
+                    <h5>Tel: +353 1 264 2424</h5>
                 </div>
 
             </div>
