--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     Give them access to Pluralsight Skills—courses,
                     assessments, learning paths, and labs—and you give them
                     the tech fluency they need to build business-critical skills.</p>
-                <div class="card-btn">
-                    <button class="free-btn">Try for free</button>
-                    <h5>Tel: +353 1 264 2424</h5>
+                <div class="where-btn d-flex">
+                    <button class="card-btn">Try for free</button>
+                   
                 </div>
 
             </div>
@@ -75,7 +75,7 @@
                 <h2>Popular topics to learn now</h2>
                 <a>View all technologies <i class="fa-solid fa-chevron-right"></i></a>
             </div>
-            <div class="languages">
+
                 <div class="languages-logo ">
                     <ul>
                         <li><a href="#">
@@ -90,7 +90,7 @@
                         <li> <a href="#"><img src="/images/azure-no-shadow.png" alt=""></a></li>
                         <li> <a href="#"><img src="/images/angular-no-shadow.png" alt=""></a></li>
                     </ul>
-                </div>
+                
             </div>
         </div>
         <div class="small-cards container ">
