--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header -->
     <header class="fix-header">
         <div class="navbar font-bitter">
-            <div class="plural-head container">
+            <div class="plural-head space-flex container">
                 <img src="/images/pluralsight-company-white-logo.png" alt="">
 
                 <ul class="inline-flex">
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="navbar-two font-bitter">
-            <div class="skills-head container">
+            <div class="skills-head space-flex container">
                 <img src="/images/Pluralsight-Product-Logo-Skills-Color-OnDark.webp" alt="">
                 <ul class="inline-flex">
                     <li>Why Skills?</li>
@@ -54,15 +54,15 @@
     <section class="where-teams">
         <div class="card container font-bitter">
             <div class="card-text ">
-                <h4>Pluralsight Skills</h4>
-                <h1>Where teams build better technology skills, faster</h1>
-                <p>Technology teams are only as successful as their skills are relevant.
+                <h4 class="p-20">Pluralsight Skills</h4>
+                <h1  class="p-20">Where teams build better technology skills, faster</h1>
+                <p class="p-20">Technology teams are only as successful as their skills are relevant.
                     Give them access to Pluralsight Skills—courses,
                     assessments, learning paths, and labs—and you give them
                     the tech fluency they need to build business-critical skills.</p>
-                <div class="where-btn d-flex">
+                <div class="where-btn d-flex p-20">
                     <button class="card-btn">Try for free</button>
-                   
+
                 </div>
 
             </div>
@@ -76,28 +76,28 @@
                 <a>View all technologies <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
-                <div class="languages-logo ">
-                    <ul>
-                        <li><a href="#">
-                                <img src="/images/r-no-shadow.png" alt="">
-                            </a> </li>
-                        <li><a href="#"> <img src="/images/python-no-shadow.png" alt=""></a> </li>
-                        <li><a href="#"><img src="/images/react-no-shadow.png" alt=""></a> </li>
-                        <li><a href="#"><img src="/images/java-no-shadow.png" alt=""></a> </li>
-                        <li><a href="#"><img src="/images/c-sharp-no-shadow.png" alt=""></a> </li>
-                        <li><a href="#"><img src="/images/ruby-no-shadow.png" alt=""></a> </li>
-                        <li><a href="#"><img src="/images/aws-no-shadow.png" alt=""></a> </li>
-                        <li> <a href="#"><img src="/images/azure-no-shadow.png" alt=""></a></li>
-                        <li> <a href="#"><img src="/images/angular-no-shadow.png" alt=""></a></li>
-                    </ul>
-                
+            <div class="languages-logo ">
+                <ul>
+                    <li><a href="#">
+                            <img src="/images/r-no-shadow.png" alt="">
+                        </a> </li>
+                    <li><a href="#"> <img src="/images/python-no-shadow.png" alt=""></a> </li>
+                    <li><a href="#"><img src="/images/react-no-shadow.png" alt=""></a> </li>
+                    <li><a href="#"><img src="/images/java-no-shadow.png" alt=""></a> </li>
+                    <li><a href="#"><img src="/images/c-sharp-no-shadow.png" alt=""></a> </li>
+                    <li><a href="#"><img src="/images/ruby-no-shadow.png" alt=""></a> </li>
+                    <li><a href="#"><img src="/images/aws-no-shadow.png" alt=""></a> </li>
+                    <li> <a href="#"><img src="/images/azure-no-shadow.png" alt=""></a></li>
+                    <li> <a href="#"><img src="/images/angular-no-shadow.png" alt=""></a></li>
+                </ul>
+
             </div>
         </div>
         <div class="small-cards container ">
             <div class="play-card">
                 <div class="card-element  font-bitter">
                     <img src="/images/icon-play.png" alt="">
-                    <h1>7,000+</h1>
+                    <h1  class="p-20">7,000+</h1>
                 </div>
                 <div class="p-font">Business customers use Pluralsight Skills</div>
             </div>
@@ -105,7 +105,7 @@
             <div class="million-card">
                 <div class="card-element  font-bitter">
                     <img src="/images/icon-skillIQ.png" alt="">
-                    <h1>5 million+</h1>
+                    <h1  class="p-20">5 million+</h1>
                 </div>
                 <div>Business customers use Pluralsight Skills</div>
             </div>
@@ -113,7 +113,7 @@
             <div class="customers-card">
                 <div class="card-element  font-bitter">
                     <img src="/images/icon-certification.png" alt="">
-                    <h1>14,000+</h1>
+                    <h1  class="p-20">14,000+</h1>
                 </div>
                 <div>Business customers use Pluralsight Skills</div>
             </div>
@@ -121,7 +121,7 @@
             <div class="percent-card">
                 <div class=" card-element  font-bitter">
                     <img src="/images/icon-thumbs-up.png" alt="">
-                    <h1>70%</h1>
+                    <h1  class="p-20">70%</h1>
                 </div>
                 <div>Business customers use Pluralsight Skills</div>
             </div>
@@ -154,8 +154,8 @@
         <div class="container">
             <div class="upskill">
                 <div class="upskill-left">
-                    <h1 class="font-bitter"> Upskill & reskill</h1>
-                    <p>Empower your tech teams to produce key business outcomes
+                    <h1 class="font-bitter p-20"> Upskill & reskill</h1>
+                    <p class="p-20">Empower your tech teams to produce key business outcomes
                         by making upskilling and reskilling as
                         easy as powering up
                         their laptop. Tap into the power of
@@ -177,8 +177,8 @@
                     <img src="/images/img2-learn.png" alt="">
                 </div>
                 <div class="upskill-left">
-                    <h1 class="font-bitter"> Learn by doing</h1>
-                    <p>Hands-on labs enable learners to develop stronger
+                    <h1 class="font-bitter p-20"> Learn by doing</h1>
+                    <p class="p-20">Hands-on labs enable learners to develop stronger
                         proficiencies in specific skills or
                         technologies through step-by-step
                         instructions, practice exercises, and projects.
@@ -190,7 +190,7 @@
             <div class="upskill">
                 <div class="upskill-left">
                     <h1 class="font-bitter"> Assess & evaluate</h1>
-                    <p>See where your team's skills stand with skill assessments.
+                    <p class="p-20">See where your team's skills stand with skill assessments.
                         With Skill IQ, you can benchmark your team's tech skills,
                         identify knowledge gaps and strengths—or
                         find out where you stand yourself.
@@ -211,28 +211,28 @@
         <div class=" container">
             <div class="returns">
                 <h1 class="font-bitter">Returns worth your investment</h1>
-                <p>By prioritizing technology skill development, your technologists will grow
+                <p class="p-20">By prioritizing technology skill development, your technologists will grow
                     in their careers and your business will
                     achieve better outcomes.</p>
-                <p>According to TechValidate Survey:</p>
+                <p class="p-20">According to TechValidate Survey:</p>
             </div>
 
             <div class="percentages text-center">
                 <div>
                     <img src="/images/93-percent.png" alt="">
-                    <p>93% of surveyed organizations realized a return on their
+                    <p class="p-20">93% of surveyed organizations realized a return on their
                         investment within 6 – 12 months
                         of implementing Pluralsight</p>
                 </div>
 
                 <div>
                     <img src="/images/96-percent.png" alt="">
-                    <p>96% of surveyed organizations are likely to recommend Pluralsight</p>
+                    <p class="p-20">96% of surveyed organizations are likely to recommend Pluralsight</p>
                 </div>
 
                 <div>
                     <img src="/images/50-percent.png" alt="">
-                    <p>Over half of surveyed organizations confirmed that Pluralsight
+                    <p class="p-20">Over half of surveyed organizations confirmed that Pluralsight
                         has enabled them to save time and money</p>
                 </div>
             </div>
@@ -281,7 +281,7 @@
                 </div>
             </div>
             <div class="experience">
-                <h1 class="font-bitter text-center">The Pluralsight Skills experience</h1>
+                <h1 class="font-bitter p-20 text-center">The Pluralsight Skills experience</h1>
                 <div class="skill-case">
                     <div class="exp-img">
                         <img src="/images/skills-logos.png" alt="">
@@ -328,7 +328,7 @@
 
     <section class="for-courses">
         <div class="course-case container">
-            <h1 class="font-bitter">What you'll do</h1>
+            <h1 class="font-bitter p-20">What you'll do</h1>
             <div class="code-course">
                 <div class="master">
                     <img src="/images/img-master-skills.png" alt="">
@@ -353,7 +353,7 @@
                 </div>
             </div>
             <div class="free-courses">
-                <h1 class="font-bitter">Try for free</h1>
+                <h1 class="font-bitter p-20">Try for free</h1>
                 <a class="pointer font-bitter">View free courses </a>
             </div>
         </div>
@@ -395,9 +395,9 @@
         <div class="coll-solutions container">
             <div>
                 <div>
-                    <h1 class="font-bitter">Our solutions</h1>
-                    <h1 class="font-bitter">Face the future with confidence</h1>
-                    <p>And with the skills and engineering insights to thrive. Our solutions enable tech teams to
+                    <h1 class="font-bitter p-20">Our solutions</h1>
+                    <h1 class="font-bitter p-20">Face the future with confidence</h1>
+                    <p class="p-20">And with the skills and engineering insights to thrive. Our solutions enable tech teams to
                         navigate digital trends and
                         customer needs that continue to shift at lightning speed. Implement one (or more) and you’ll
                         transform your technology
@@ -410,7 +410,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="content">
-                        <p>Overcome complex cloud challenges, build top cloud talent from within, become cloud native,
+                        <p class="p-20">Overcome complex cloud challenges, build top cloud talent from within, become
+                            cloud native,
                             and
                             connect cloud skill
                             development and certifications to your objectives.</p>
@@ -422,7 +423,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="content">
-                        <p>Remove knowledge barriers, increase collaboration, and accelerate every touchpoint to
+                        <p class="p-20">Remove knowledge barriers, increase collaboration, and accelerate every
+                            touchpoint to
                             technology
                             with an all-new
                             end-to-end tech fluency solution.</p>
@@ -433,7 +435,7 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="content">
-                        <p>Get new engineering hires to full productivity—and contributing to your business
+                        <p class="p-20">Get new engineering hires to full productivity—and contributing to your business
                             results—faster
                             and without bogging down
                             the team.</p>
@@ -445,7 +447,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="content">
-                        <p>Empower software delivery teams to ship reliable, scalable, secure code on time by ensuring
+                        <p class="p-20">Empower software delivery teams to ship reliable, scalable, secure code on time
+                            by ensuring
                             teams work together
                             effectively and have the right data-driven insights and skills.</p>
                         <a class="pointer font-bitter">Learn more </a>
@@ -456,7 +459,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="content">
-                        <p>Get real insight into how your Agile journey is progressing and how you can empower your
+                        <p class="p-20">Get real insight into how your Agile journey is progressing and how you can
+                            empower your
                             development team to
                             continuously improve.</p>
                         <a class="pointer font-bitter">Learn more </a>
@@ -466,7 +470,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="content">
-                        <p>Create your own internal talent pipeline with analytics on employee proficiency—by role and
+                        <p class="p-20">Create your own internal talent pipeline with analytics on employee
+                            proficiency—by role and
                             skill—and reports that
                             highlight impact and efficiency.</p>
                         <a class="pointer font-bitter">Learn more </a>
@@ -476,7 +481,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="content">
-                        <p>Mitigate burnout and reduce cycle times with the visibility and tools to develop skills and
+                        <p class="p-20">Mitigate burnout and reduce cycle times with the visibility and tools to develop
+                            skills and
                             fix
                             workflow gaps for
                             distributed teams.</p>
@@ -487,7 +493,8 @@
                         <i class="fa-solid fa-chevron-down"></i>
                     </div>
                     <div class="content">
-                        <p>Access an academy tailored to your unique circumstances. Source and develop the talent you
+                        <p class="p-20">Access an academy tailored to your unique circumstances. Source and develop the
+                            talent you
                             need
                             and benefit from the
                             breadth of experience diversity brings.</p>
@@ -513,11 +520,11 @@
         <div class="plans container  ">
             <div class="text-center">
                 <img src="/images/logo_ps-skills.png" alt="">
-                <h1 class="font-bitter">Plans & pricing</h1>
+                <h1 class="font-bitter p-20">Plans & pricing</h1>
             </div>
             <div class="plans-cards text-center">
                 <div class="starter">
-                    <h1 class="font-bitter">Starter</h1>
+                    <h1 class="font-bitter p-20">Starter</h1>
                     <div class="font-bitter price">399 $</div>
                     <div>per user / year</div>
                     <div class="font-bitter ">Upskill your team with our core library.</div>
@@ -526,7 +533,7 @@
                 </div>
 
                 <div class="professional">
-                    <h1 class="font-bitter">Professional</h1>
+                    <h1 class="font-bitter p-20">Professional</h1>
                     <div class="font-bitter price">579 $</div>
                     <div>per user / year</div>
                     <div class="font-bitter">Basic reporting and user
@@ -536,7 +543,7 @@
                 </div>
 
                 <div class="enterprise">
-                    <h1 class="font-bitter">Enterprise</h1>
+                    <h1 class="font-bitter p-20">Enterprise</h1>
                     <div class="font-bitter price">779 $</div>
                     <div>per user / year</div>
                     <div class="font-bitter">Flexibility and advanced analytics for the enterprise.</div>
@@ -546,7 +553,7 @@
 
             </div>
             <div class="text-center">
-                <p>*All per-user products require an annual contract.</p>
+                <p class="p-20">*All per-user products require an annual contract.</p>
                 <a class="pointer font-bitter">Compare plans </a>
             </div>
         </div>
@@ -555,8 +562,8 @@
     <section class="chat-case">
         <div class="contact-case container">
             <div class="ask-case">
-                <h1 class="font-bitter">Ask us (almost) anything</h1>
-                <p>
+                <h1 class="font-bitter p-20">Ask us (almost) anything</h1>
+                <p class="p-20">
                     It's time to help your teams master new skills so you can build the talent you need and turn those
                     challenges into wins.
                     Questions? Fill out the form and we'll find you the answers.
@@ -564,7 +571,7 @@
             </div>
             <div class="form-case">
                 <form>
-                    <h1 class="font-bitter">Let's chat!</h1>
+                    <h1 class="font-bitter p-20">Let's chat!</h1>
                     <div>
                         <label>First Name</label>
                         <input type="text">
@@ -687,14 +694,15 @@
                     <li>
                         <div>
                             <label>Email Address</label><br>
-                            <input type="text" style="width: 90%;">
+                            <input type="text" style="width: 90%; margin-top: 10px;">
                         </div>
                     </li>
                     <li>
                         <div class="d-flex">
                             <input type="checkbox">
-                            <h5 >I would like to receive emails from Pluralsight:</h5>
-                        </div>
+                            <h5 style="margin-left: 10px;">I would like to receive emails from Pluralsight:</h5>
+                        </div> 
+                        <button class="footer-btn">Submit</button>
                     </li>
                 </ul>
 
