--- a/index.html
+++ b/index.html
@@ -76,24 +76,24 @@
                 <a>View all technologies <i class="fa-solid fa-chevron-right"></i></a>
             </div>
 
-            <div class="languages-logo  ">
-                <ul class="d-flex">
-                    <li><a href="#">
+            <div class="languages-logo ">
+                
+                    <div><a href="#">
                             <img src="/images/r-no-shadow.png" alt="">
-                        </a> </li>
-                    <li><a href="#"> <img src="/images/python-no-shadow.png" alt=""></a> </li>
-                    <li><a href="#"><img src="/images/react-no-shadow.png" alt=""></a> </li>
-                    <li><a href="#"><img src="/images/java-no-shadow.png" alt=""></a> </li>
-                    <li><a href="#"><img src="/images/c-sharp-no-shadow.png" alt=""></a> </li>
-                    <li><a href="#"><img src="/images/ruby-no-shadow.png" alt=""></a> </li>
-                    <li><a href="#"><img src="/images/aws-no-shadow.png" alt=""></a> </li>
-                    <li> <a href="#"><img src="/images/azure-no-shadow.png" alt=""></a></li>
-                    <li> <a href="#"><img src="/images/angular-no-shadow.png" alt=""></a></li>
-                </ul>
+                        </a> </div>
+                    <div><a href="#"> <img src="/images/python-no-shadow.png" alt=""></a> </div>
+                    <div><a href="#"><img src="/images/react-no-shadow.png" alt=""></a> </div>
+                    <div><a href="#"><img src="/images/java-no-shadow.png" alt=""></a> </div>
+                    <div><a href="#"><img src="/images/c-sharp-no-shadow.png" alt=""></a> </div>
+                    <div><a href="#"><img src="/images/ruby-no-shadow.png" alt=""></a> </div>
+                    <div><a href="#"><img src="/images/aws-no-shadow.png" alt=""></a> </div>
+                    <div> <a href="#"><img src="/images/azure-no-shadow.png" alt=""></a></div>
+                    <div> <a href="#"><img src="/images/angular-no-shadow.png" alt=""></a></div>
+              
 
             </div>
         </div>
-        <div class="small-cards container ">
+        <div class="small-cards container p-40">
             <div class="play-card b-radius p-20 bg-white">
                 <div class="card-element  font-bitter">
                     <img class="small-img" src="/images/icon-play.png" alt="">
@@ -129,8 +129,8 @@
     </section>
 
     <section class="section-brands container">
-        <div>
-            <h3 class="text-center font-bitter">Trusted by teams at fast-growing startups and big-name brands </h3>
+        <div class="pt-30">
+            <h3 class="text-center font-bitter ">Trusted by teams at fast-growing startups and big-name brands </h3>
         </div>
         <div class="row">
             <div class="brands text-center">
