--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                             By filling out this form and
                             clicking submit, you acknowledge our <a href="#">privacy policy.</a>
                         </div>
-                        <button class="free-btn">Submit</button>
+                        <button class="browse-btn b-radius pointer">Submit</button>
                     </div>
                 </form>
             </div>
