--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 
 <body>
 
+    <div class="menu-btn pointer">
+        <i class="fa-solid fa-bars"></i>
+    </div>
     <!-- Header -->
     <header class="fix-header">
         <div class="navbar font-bitter">
             <div class="plural-head space-flex container">
                 <img src="/images/pluralsight-company-white-logo.png" alt="">
 
-                <ul class="inline-flex pointer">
+                <ul class="inline-flex pointer main-menu">
                     <li><a class="link-bottom" href="#">Pluralsight</a></li>
                     <li><a class="link-bottom" href="#">Skills</a></li>
                     <li><a class="link-bottom" href="#">Flow</a></li>
@@ -77,19 +80,19 @@
             </div>
 
             <div class="languages-logo ">
-                
-                    <div><a href="#">
-                            <img src="/images/r-no-shadow.png" alt="">
-                        </a> </div>
-                    <div><a href="#"> <img src="/images/python-no-shadow.png" alt=""></a> </div>
-                    <div><a href="#"><img src="/images/react-no-shadow.png" alt=""></a> </div>
-                    <div><a href="#"><img src="/images/java-no-shadow.png" alt=""></a> </div>
-                    <div><a href="#"><img src="/images/c-sharp-no-shadow.png" alt=""></a> </div>
-                    <div><a href="#"><img src="/images/ruby-no-shadow.png" alt=""></a> </div>
-                    <div><a href="#"><img src="/images/aws-no-shadow.png" alt=""></a> </div>
-                    <div> <a href="#"><img src="/images/azure-no-shadow.png" alt=""></a></div>
-                    <div> <a href="#"><img src="/images/angular-no-shadow.png" alt=""></a></div>
-              
+
+                <div><a href="#">
+                        <img src="/images/r-no-shadow.png" alt="">
+                    </a> </div>
+                <div><a href="#"> <img src="/images/python-no-shadow.png" alt=""></a> </div>
+                <div><a href="#"><img src="/images/react-no-shadow.png" alt=""></a> </div>
+                <div><a href="#"><img src="/images/java-no-shadow.png" alt=""></a> </div>
+                <div><a href="#"><img src="/images/c-sharp-no-shadow.png" alt=""></a> </div>
+                <div><a href="#"><img src="/images/ruby-no-shadow.png" alt=""></a> </div>
+                <div><a href="#"><img src="/images/aws-no-shadow.png" alt=""></a> </div>
+                <div> <a href="#"><img src="/images/azure-no-shadow.png" alt=""></a></div>
+                <div> <a href="#"><img src="/images/angular-no-shadow.png" alt=""></a></div>
+
 
             </div>
         </div>
@@ -146,7 +149,7 @@
                 <div>
                     <img src="/images/t-mobile.png" alt="">
                 </div>
-                <div>
+                <div class="devon">
                     <img src="/images/devon-somerset.png" alt="">
                 </div>
             </div>
@@ -733,6 +736,9 @@
     </footer>
 
     <script>
+
+        document.querySelector(".menu-btn").addEventListener
+        ("click", () => document.querySelector(".main-menu").classList.toggle("show"))
         var coll = document.getElementsByClassName("col-btn");
         var i;
 
