--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <div class="navbar font-bitter">
             <div class="plural-head space-flex container">
                 <img src="/images/pluralsight-company-white-logo.png" alt="">
-
                 <ul class="inline-flex pointer main-menu">
                     <li><a class="link-bottom" href="#">Pluralsight</a></li>
                     <li><a class="link-bottom" href="#">Skills</a></li>
@@ -33,7 +32,6 @@
                 </ul>
             </div>
         </div>
-  
     </header>
 
     <section class="where-teams">
@@ -613,7 +611,7 @@
                             By filling out this form and
                             clicking submit, you acknowledge our <a href="#">privacy policy.</a>
                         </div>
-                        <button class="browse-btn b-radius pointer">Submit</button>
+                        <button class="contact-btn b-radius pointer">Submit</button>
                     </div>
                 </form>
             </div>
